@@ -71,11 +71,6 @@ extern int luaopen_zlib(lua_State * L);
 extern int luaopen_gzip(lua_State * L);
 extern int luaopen_ff(lua_State * L);
 extern int luaopen_profiler(lua_State * L);
-#ifdef _MSC_VER
-LUALIB_API int luaopen_bit32(lua_State * L);
-#else
-extern int luaopen_bit32(lua_State * L);
-#endif
 
 extern int luaopen_socket_core(lua_State * L);
 extern int luaopen_mime_core(lua_State * L);
